--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     ]
   },
   "dependencies": {
+    "date-fns": "^2.29.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
