--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "@react-pdf/renderer": "^2.3.0",
     "date-fns": "^2.29.2",
     "next": "12.2.5",
