--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@react-pdf/renderer": "^2.3.0",
+    "daisyui": "^2.24.0",
     "date-fns": "^2.29.2",
     "next": "12.2.5",
     "react": "18.2.0",
